fixed some errors in OpenAPI schemas
